target/debug/build/crossbeam-utils-036455a26b25d809/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/5680fa18feaa87f3ff04063800aec256c3d4b4be\library\core\src\sync\atomic.rs:2927:1
 ::: /rustc/5680fa18feaa87f3ff04063800aec256c3d4b4be\library\core\src\sync\atomic.rs:2945:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
